# dynaris

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  index.rst  math.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: components.rst  core.rst  datasets.rst  dlm.rst  estimation.rst  filters.rst  forecast.rst  index.rst  plotting.rst  smoothers.rst
docs/examples/: index.rst
docs/getting-started/: concepts.rst  installation.rst  quickstart.rst
docs/user-guide/: batch-processing.rst  components.rst  datasets.rst  estimation.rst  forecasting.rst  index.rst  plotting.rst
examples/: airline_passengers.py  dynamic_regression.py  gdp_business_cycle.py  global_temperature.py  lynx_population.py  nile_river.py  panel_overview.py  sunspot_cycles.py  trend_seasonal.py
src/dynaris/: __init__.py
src/dynaris/core/: __init__.py  nonlinear.py  protocols.py  results.py  state_space.py  types.py
src/dynaris/datasets/: __init__.py  data.py
src/dynaris/dlm/: __init__.py  api.py  components.py
src/dynaris/estimation/: __init__.py  diagnostics.py  em.py  mle.py  transforms.py
src/dynaris/filters/: __init__.py  ekf.py  kalman.py  ukf.py
src/dynaris/forecast/: __init__.py  forecast.py
src/dynaris/models/: __init__.py
src/dynaris/plotting/: __init__.py  plots.py  style.py
src/dynaris/smoothers/: __init__.py  rts.py
src/dynaris/utils/: __init__.py
tests/: test_init.py
tests/test_core/: test_protocols.py  test_results.py  test_state_space.py  test_types.py
tests/test_dlm/: test_api.py  test_components.py
tests/test_estimation/: test_diagnostics.py  test_em.py  test_mle.py
tests/test_filters/: test_ekf.py  test_kalman.py  test_ukf.py
tests/test_forecast/: test_forecast.py
tests/test_plotting/: test_plots.py
tests/test_smoothers/: test_rts.py
