[project]
name = "dynaris"
version = "0.1.0"
description = "A JAX-powered Python library for Dynamic Linear Models (DLMs)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "quantsci" },
]
keywords = ["jax", "kalman-filter", "dlm", "state-space", "time-series", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/quant-sci/dynaris"
Repository = "https://github.com/quant-sci/dynaris"
Issues = "https://github.com/quant-sci/dynaris/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pandas-stubs>=3.0.0.260204",
    "sphinx>=9.1.0",
    "alabaster>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynaris"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["dynaris"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "matplotlib.*",
    "pandas",
    "pandas.*",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dynaris.plotting.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
